# AABY

./: MANIFEST.in  README.md  aaby.sh  coby_input.yaml  environment.yml  pyproject.toml  setup.py
AABY.egg-info/: PKG-INFO
COBY_toppar/: DAPC.itp  DLPC.itp  DLPG.itp  DMPG.itp  DOPC.itp  DOPG.itp  DPPG.itp  POPS.itp  PSM.itp  SDPC.itp
Scripts/: AABY.py  aaby.sh  add_ace_nme.py  add_ter.py  amber2gmx.py  amber2gmx_itp.py  change_prot.py  coby_args2yaml.py  coby_input.yaml  convert_and_split.py  convert_prmtop_to_gmx_clean.py  flow.ipynb  generate_posres_full.py  perturb.ipynb  prepare.txt  prepare_for_simulations.py  re_ss.py  renameChain.py  renamePOPC.py  resolvate.py  resolvate_replicas.py  ss.py  test.ipynb  tleap.in  tleap_solv.in
aaby/: __init__.py  cli.py  main.py  utils.py  workflow.py
aaby.egg-info/: PKG-INFO
aaby/data/: tleap.in
aaby/scripts/: AABY.py  convert_and_split.py  generate_restraints.py  pka.py  prepare_for_simulations.py  re_ss.py  resolvate_replicas.py
mdps/: step6.1_equilibration_vac.mdp  step6.2_equilibration.mdp  step6.3_equilibration_vac.mdp  step6.4_equilibration.mdp  step6.5_equilibration.mdp  step6.5_equilibration_vac.mdp  step6.6_equilibration.mdp
mdps/MEMBRANE/: mdout.mdp  step6.0_minimization.mdp  step6.3_equilibration.mdp  step6.5_equilibration.mdp  step7_production.mdp
mdps/MEMBRANE_CG/: step7_production.mdp  (+1 more)
models/: #DMPC.pdb.1#  tip4p.gro  tip4pew.gro
tests/: test_workflow.py
toppar/: #CHL.pdb.1#  ACE.itp  Cl-.itp  NME.itp  Na+.itp  SSBOND.txt  WAT.itp  system2.itp  system4.itp  system5.itp  system6.itp  system7.itp
(+53 files in other folders)
