[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AABY"
version = "0.1.2"
description = "End-to-end AMBER system builder from PDB"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Amanda Dyrholm Stange" }
]

[project.scripts]
aaby = "aaby.main:main"

[tool.setuptools.package-data]
"aaby" = ["resources/**/*"]
